--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,6 +6,43 @@
   <title>YouTube Chapter Generator</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
+  <style>
+    /* Debug section styles */
+    .debug-section {
+      margin-top: 16px;
+      border-top: 1px solid #ddd;
+      padding-top: 8px;
+    }
+    .debug-title {
+      font-size: 12px;
+      color: #666;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+    .debug-title:hover {
+      color: #1a73e8;
+    }
+    .debug-icon {
+      margin-right: 4px;
+    }
+    .debug-content {
+      display: none;
+      max-height: 200px;
+      overflow-y: auto;
+      background-color: #f5f5f5;
+      border-radius: 4px;
+      padding: 8px;
+      margin-top: 8px;
+      font-family: 'Roboto Mono', monospace;
+      font-size: 11px;
+      white-space: pre-wrap;
+      word-break: break-all;
+    }
+    .debug-content.visible {
+      display: block;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -63,11 +100,29 @@
       </div>
     </div>
     
+    <!-- Debug Information Section -->
+    <div class="debug-section">
+      <div class="debug-title" id="debug-title">
+        <span class="debug-icon">🔍</span>
+        <span>Debug Information</span>
+      </div>
+      <div class="debug-content" id="debug-content">
+        <div id="debug-info">Waiting for debug information...</div>
+      </div>
+    </div>
+    
     <footer>
       Made with ❤️ | <a href="https://github.com/bohdan-s24/new-ycg" target="_blank">GitHub</a>
     </footer>
   </div>
   
   <script src="js/popup.js"></script>
+  <script>
+    // Toggle debug information visibility
+    document.getElementById('debug-title').addEventListener('click', function() {
+      const debugContent = document.getElementById('debug-content');
+      debugContent.classList.toggle('visible');
+    });
+  </script>
 </body>
 </html> 
