fix: Google Sign-In functionality in extension popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,6 +6,7 @@
   <title>YouTube Chapter Generator</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
+  <script src="js/config.js"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
@@ -56,7 +57,7 @@
         <p class="auth-description">Sign in to track your credits and access premium features</p>
         <div id="google-signin-button" class="google-signin-button">
           <div id="g_id_onload"
-            data-client_id="YOUR_GOOGLE_CLIENT_ID"
+            data-client_id=""
             data-context="signin"
             data-callback="handleGoogleSignIn"
             data-auto_prompt="false">
