--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,24 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
   <script src="js/config.js"></script>
-  <!-- We'll load the Google Sign-In script dynamically after DOM content is loaded -->
-  <script>
-    // Add event listener to load Google Sign-In script after DOM content is loaded
-    document.addEventListener('DOMContentLoaded', function() {
-      console.log("DOM fully loaded, adding Google Sign-In script");
-      const googleScript = document.createElement('script');
-      googleScript.src = "https://accounts.google.com/gsi/client";
-      googleScript.async = true;
-      googleScript.defer = true;
-      googleScript.onload = function() {
-        console.log("Google Sign-In script loaded successfully");
-      };
-      googleScript.onerror = function() {
-        console.error("Failed to load Google Sign-In script");
-      };
-      document.body.appendChild(googleScript);
-    });
-  </script>
 </head>
 <body>
   <header>
@@ -72,21 +54,16 @@
       <div class="auth-section">
         <h2>Sign in to YCG</h2>
         <p class="auth-description">Sign in to track your credits and access premium features</p>
-        <div id="google-signin-button" class="google-signin-button">
-          <div id="g_id_onload"
-            data-client_id=""
-            data-context="signin"
-            data-callback="handleGoogleSignIn"
-            data-auto_prompt="false">
-          </div>
-          <div class="g_id_signin"
-            data-type="standard"
-            data-size="large"
-            data-theme="outline"
-            data-text="signin_with"
-            data-shape="rectangular"
-            data-logo_alignment="left">
-          </div>
+        <div class="generate-button-container">
+          <button id="google-signin-btn" class="btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" style="margin-right: 8px;">
+              <path fill="#4285F4" d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"/>
+              <path fill="#34A853" d="M9 18c2.43 0 4.467-.806 5.956-2.18l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332A8.997 8.997 0 0 0 9 18z"/>
+              <path fill="#FBBC05" d="M3.964 10.71A5.41 5.41 0 0 1 3.682 9c0-.593.102-1.17.282-1.71V4.958H.957A8.996 8.996 0 0 0 0 9c0 1.452.348 2.827.957 4.042l3.007-2.332z"/>
+              <path fill="#EA4335" d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0A8.997 8.997 0 0 0 .957 4.958L3.964 7.29C4.672 5.163 6.656 3.58 9 3.58z"/>
+            </svg>
+            Sign in with Google
+          </button>
         </div>
         <div class="auth-footer">
           <p>By signing in, you agree to our <a href="#" id="terms-link">Terms of Service</a> and <a href="#" id="privacy-link">Privacy Policy</a></p>
