--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,22 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
   <script src="js/config.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      console.log("DOM fully loaded, adding Google Sign-In script");
-      const googleScript = document.createElement('script');
-      googleScript.src = "https://accounts.google.com/gsi/client";
-      googleScript.async = true;
-      googleScript.defer = true;
-      googleScript.onload = function() {
-        console.log("Google Sign-In script loaded successfully");
-      };
-      googleScript.onerror = function() {
-        console.error("Failed to load Google Sign-In script");
-      };
-      document.body.appendChild(googleScript);
-    });
-  </script>
+  <!-- Google Sign-In script will be loaded by auth.js -->
 </head>
 <body>
   <header>
@@ -63,7 +48,7 @@
       </div>
     </div>
   </header>
-  
+
   <div id="welcome-container" class="welcome-container">
     <div class="welcome-content">
       <h2>Welcome to YouTube Chapter Generator</h2>
@@ -74,7 +59,21 @@
       <p class="auth-footer">By signing in, you agree to our <a href="#" id="terms-link">Terms of Service</a> and <a href="#" id="privacy-link">Privacy Policy</a></p>
     </div>
   </div>
-  
+
+  <div id="auth-container" class="auth-container hidden">
+    <div class="auth-content">
+      <h2>Sign In</h2>
+      <div id="error-message" class="error-message hidden"></div>
+      <div id="google-signin-button-auth" class="google-signin-button">
+        <!-- Google Sign-In button will be rendered here by auth.js -->
+      </div>
+    </div>
+  </div>
+
+  <div id="main-content" class="main-content hidden">
+    <!-- Main content will be added here by popup.js -->
+  </div>
+
   <script src="js/auth.js"></script>
   <script src="js/popup.js"></script>
 </body>
