--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
   <script src="js/config.js"></script>
+  <script src="js/state.js"></script>
+  <script src="js/api.js"></script>
   <!-- Google Sign-In script will be loaded by auth.js -->
 </head>
 <body>
@@ -74,6 +76,8 @@
     <!-- Main content will be added here by popup.js -->
   </div>
 
+  <script src="js/video.js"></script>
+  <script src="js/ui.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/popup.js"></script>
 </body>
