--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,10 +6,7 @@
   <title>YouTube Chapter Generator</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
-  <script src="js/config.js"></script>
-  <script src="js/state.js"></script>
-  <script src="js/api.js"></script>
-  <!-- Google Sign-In script will be loaded by auth.js -->
+  <!-- All scripts will be loaded at the end of the body -->
 </head>
 <body>
   <header>
@@ -76,6 +73,10 @@
     <!-- Main content will be added here by popup.js -->
   </div>
 
+  <!-- Load scripts in the correct order -->
+  <script src="js/config.js"></script>
+  <script src="js/state.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/video.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/auth.js"></script>
