--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,73 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube Chapter Generator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/popup.css">
   <!-- All scripts will be loaded at the end of the body -->
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <div class="header-left">
-        <img src="icons/icon48.png" alt="Logo" class="logo">
-        <h1>YouTube Chapter Generator</h1>
+  <div class="app-container">
+    <!-- Welcome Screen -->
+    <div id="welcome-container" class="screen">
+      <div class="welcome-content">
+        <div class="logo-container">
+          <img src="icons/icon128.png" alt="Logo" class="welcome-logo">
+          <h1>YouTube Chapter Generator</h1>
+        </div>
+        <p class="welcome-message">Login to generate catchy chapters for your videos</p>
+        <div id="google-signin-button" class="google-signin-button">
+          <!-- Google Sign-In button will be rendered here by auth.js -->
+        </div>
+        <p class="auth-footer">By signing in, you agree to our <a href="#" id="terms-link">Terms of Service</a> and <a href="#" id="privacy-link">Privacy Policy</a></p>
       </div>
-      <div class="header-right">
-        <div class="credits-badge" id="credits-badge">
-          <span class="credits-icon">⭐</span>
-          <span id="credits-count">-</span>
+    </div>
+
+    <!-- Auth Screen -->
+    <div id="auth-container" class="screen hidden">
+      <div class="auth-content">
+        <h2>Sign In</h2>
+        <div id="error-message" class="error-message hidden"></div>
+        <div id="google-signin-button-auth" class="google-signin-button">
+          <!-- Google Sign-In button will be rendered here by auth.js -->
         </div>
-        <div id="user-profile" class="user-profile hidden">
-          <img id="user-avatar" class="user-avatar" src="icons/user.png" alt="User">
+      </div>
+    </div>
+
+    <!-- Main Screen -->
+    <div id="main-content" class="screen hidden">
+      <!-- Header -->
+      <header class="main-header">
+        <div class="header-left">
+          <img src="icons/icon48.png" alt="Logo" class="logo">
+          <h2>YouTube Chapter Generator</h2>
         </div>
-        <button id="login-btn" class="btn btn-sm">Sign In</button>
-        <div id="user-menu" class="user-menu hidden">
-          <div id="user-menu-header" class="user-menu-header">
-            <img id="menu-user-avatar" class="menu-user-avatar" src="icons/user.png" alt="User">
-            <div class="user-details">
-              <div id="user-name" class="user-name">User Name</div>
-              <div id="user-email" class="user-email">user@example.com</div>
-            </div>
+        <div class="header-right">
+          <div class="credits-badge" id="credits-badge">
+            <span id="credits-count">3</span>
           </div>
-          <div class="user-menu-items">
-            <a href="#" id="my-account-link" class="menu-item">Buy More Credits</a>
-            <a href="#" id="feedback-link" class="menu-item">Leave Feedback</a>
-            <a href="#" id="logout-link" class="menu-item">Sign Out</a>
+          <button id="settings-btn" class="icon-btn" aria-label="Settings">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="3"></circle>
+              <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+            </svg>
+          </button>
+          <div id="user-profile" class="user-profile hidden">
+            <img id="user-avatar" class="user-avatar" src="icons/user.png" alt="User">
           </div>
         </div>
-        <button id="settings-btn" class="icon-btn" title="Settings">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="12" cy="12" r="3"></circle>
-            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
-          </svg>
-        </button>
+      </header>
+
+      <!-- Settings Menu -->
+      <div id="user-menu" class="user-menu hidden">
+        <div id="user-menu-header" class="user-menu-header">
+          <img id="menu-user-avatar" class="menu-user-avatar" src="icons/user.png" alt="User">
+          <div class="user-details">
+            <div id="user-name" class="user-name">User Name</div>
+            <div id="user-email" class="user-email">user@example.com</div>
+          </div>
+        </div>
+        <div class="user-menu-items">
+          <a href="#" id="my-account-link" class="menu-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="10"></circle>
+              <path d="M12 6v6l4 2"></path>
+            </svg>
+            Buy More Credits
+          </a>
+          <a href="#" id="feedback-link" class="menu-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+            </svg>
+            Leave Feedback
+          </a>
+          <a href="#" id="logout-link" class="menu-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+              <polyline points="16 17 21 12 16 7"></polyline>
+              <line x1="21" y1="12" x2="9" y2="12"></line>
+            </svg>
+            Sign Out
+          </a>
+        </div>
+      </div>
+
+      <!-- Main Content Area (will be populated by JS) -->
+      <div id="main-content-area" class="main-content-area">
+        <!-- This will be populated by JS -->
       </div>
     </div>
-  </header>
-
-  <div id="welcome-container" class="welcome-container">
-    <div class="welcome-content">
-      <h2>Welcome to YouTube Chapter Generator</h2>
-      <p class="welcome-message">Login to generate catchy chapters for your videos</p>
-      <div id="google-signin-button" class="google-signin-button">
-        <!-- Google Sign-In button will be rendered here by auth.js -->
-      </div>
-      <p class="auth-footer">By signing in, you agree to our <a href="#" id="terms-link">Terms of Service</a> and <a href="#" id="privacy-link">Privacy Policy</a></p>
-    </div>
-  </div>
-
-  <div id="auth-container" class="auth-container hidden">
-    <div class="auth-content">
-      <h2>Sign In</h2>
-      <div id="error-message" class="error-message hidden"></div>
-      <div id="google-signin-button-auth" class="google-signin-button">
-        <!-- Google Sign-In button will be rendered here by auth.js -->
-      </div>
-    </div>
-  </div>
-
-  <div id="main-content" class="main-content hidden">
-    <!-- Main content will be added here by popup.js -->
   </div>
 
   <!-- Load scripts in the correct order -->
