--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,7 +17,7 @@
           <img src="icons/icon128.png" alt="Logo" class="welcome-logo">
           <h1>YouTube Chapter Generator</h1>
         </div>
-        <p class="welcome-message">Login to generate catchy chapters for your videos</p>
+        <p class="welcome-message">Create professional chapters for your videos with just one click</p>
         <div id="google-signin-button" class="google-signin-button">
           <!-- Google Sign-In button will be rendered here by auth.js -->
         </div>
