Full Stripe integration: backend and Chrome extension for credit purchases and subscriptions

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -74,6 +74,14 @@
             </svg>
             Buy More Credits
           </a>
+          <div id="purchase-options" class="purchase-options hidden">
+            <div class="purchase-title">Buy Credits</div>
+            <button class="purchase-btn" data-price-id="price_1RGefhF7Kryr2ZRb4GUtKKvj" data-mode="payment">10 Credits – $9 (One-Time)</button>
+            <button class="purchase-btn" data-price-id="price_1RGefRF7Kryr2ZRbmpxIKe7S" data-mode="payment">50 Credits – $29 (One-Time)</button>
+            <button class="purchase-btn" data-price-id="price_1RGef7F7Kryr2ZRb9FWp5g7v" data-mode="subscription">10 Credits – $9/mo (Subscription)</button>
+            <button class="purchase-btn" data-price-id="price_1RGenMF7Kryr2ZRbrNPx4BVb" data-mode="subscription">50 Credits – $29/mo (Subscription)</button>
+            <div class="purchase-note">You will be redirected to Stripe for secure checkout.</div>
+          </div>
           <a href="#" id="feedback-link" class="menu-item" tabindex="0" aria-label="Leave Feedback">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
